Port DiseaseRepository to SQLite (HPO-160/164)
Adds SqliteConnectionProvider (a Micronaut singleton wrapping a JDBC
Connection to a configured sqlite.path), and rewrites all 4
DiseaseRepository queries from Cypher to SQL: findDiseaseById,
findDiseases, findGenesByDisease, findPhenotypesByDisease, and
findMedicalActionsByDisease (grouping medical_action_target +
medical_action_annotation rows by action, preserving the HP:0000118 ->
disease-id read-time remap).

findDiseases drops the regex-based name matching for a plain SQL LIKE for
now -- FTS is HPO-163's separate scope, and HPO-165's parallel-diff ticket
already documents search result changes as an accepted difference.

Test fixture: DiseaseRepositoryTest builds its own isolated SQLite file via
TestPropertyProvider + @TempDir, with the same fixture data the Neo4j
version used, translated to the new schema (including preserving an
existing mondoId formatting inconsistency in the original fixture, since
Disease.equals() never compared it anyway -- porting, not fixing, unrelated
pre-existing test looseness).

GeneRepository and PhenotypeRepository still use Neo4j -- both driver types
coexist during the migration, same strangler pattern used in HPO-158.